--- a/index.html
+++ b/index.html
@@ -939,7 +939,7 @@
               </div>
               <div class="footer-text">
                   <div class="container">
-                      <p>Copyright 2018. Designed and Developed by <a href="https://bootstrapmart.com/">BootstrapMart </a> &amp; Distributed by <a href="https://themewagon.com/">ThemeWagon</a></p>
+                      <p>Copyright 2024. Designed and Developed by <a href="https://webefyit.com/">webefy IT </a></p>
                   </div>
               </div>
           </div><!-- Footer -->
